// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow code generation #generateSource() should annotate custom scalars as string 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

/* GraphQL Operation: CustomScalar */

export type CustomScalarQuery = {|
  misc: ? CustomScalarQuery_misc,
|};

export type CustomScalarQuery_misc = {|
  __typename: string,
  date: ?any,
|};"
`;

exports[`Flow code generation #generateSource() should generate correct typedefs with a multiple custom fragments 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.


// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.

/* GraphQL Operation: HeroAndFriendsNames */

export type HeroAndFriendsNamesQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ?(HeroAndFriendsNamesQuery_hero_Human | HeroAndFriendsNamesQuery_hero_Droid),
|};

export type HeroAndFriendsNamesQuery_hero_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Droid_friends_Human | HeroAndFriendsNamesQuery_hero_Droid_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Human_friends_Human | HeroAndFriendsNamesQuery_hero_Human_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};
/* GraphQL Fragment: Friend */

export type FriendFragment = (FriendFragment__Human | FriendFragment__Droid);
export type FriendFragment__Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type FriendFragment__Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};
/* GraphQL Fragment: Person */

export type PersonFragment = (PersonFragment__Human | PersonFragment__Droid);
export type PersonFragment__Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type PersonFragment__Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should generate correct typedefs with a single custom fragment 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.


// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.

/* GraphQL Operation: HeroAndFriendsNames */

export type HeroAndFriendsNamesQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ?(HeroAndFriendsNamesQuery_hero_Human | HeroAndFriendsNamesQuery_hero_Droid),
|};

export type HeroAndFriendsNamesQuery_hero_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Droid_friends_Human | HeroAndFriendsNamesQuery_hero_Droid_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Human_friends_Human | HeroAndFriendsNamesQuery_hero_Human_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};
/* GraphQL Fragment: Friend */

export type FriendFragment = (FriendFragment__Human | FriendFragment__Droid);
export type FriendFragment__Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type FriendFragment__Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should generate fragmented query operations 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

/* GraphQL Operation: HeroAndFriendsNames */

export type HeroAndFriendsNamesQuery = {|
  hero: ?(HeroAndFriendsNamesQuery_hero_Human | HeroAndFriendsNamesQuery_hero_Droid),
|};

export type HeroAndFriendsNamesQuery_hero_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Droid_friends_Human | HeroAndFriendsNamesQuery_hero_Droid_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Human_friends_Human | HeroAndFriendsNamesQuery_hero_Human_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};
/* GraphQL Fragment: heroFriends */

export type HeroFriendsFragment = (HeroFriendsFragment__Human | HeroFriendsFragment__Droid);
export type HeroFriendsFragment__Droid = {|
  __typename: \\"Droid\\",
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroFriendsFragment__Droid_friends_Human | HeroFriendsFragment__Droid_friends_Droid) >,
|};

export type HeroFriendsFragment__Droid_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroFriendsFragment__Droid_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};

export type HeroFriendsFragment__Human = {|
  __typename: \\"Human\\",
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroFriendsFragment__Human_friends_Human | HeroFriendsFragment__Human_friends_Droid) >,
|};

export type HeroFriendsFragment__Human_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroFriendsFragment__Human_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should generate mutation operations with complex input types 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.


// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type ReviewInput = {|
  // 0-5 stars
  stars: number,
  // Comment about the movie, optional
  commentary?: ?string,
  // Favorite color, optional
  favorite_color?: ?ColorInput,
|};

export type ColorInput = {|
  red: number,
  green: number,
  blue: number,
|};
/* GraphQL Operation: ReviewMovie */

export type ReviewMovieMutationVariables = {|
  episode?: ?Episode,
  review?: ?ReviewInput,
|};

export type ReviewMovieMutation = {|
  createReview: ? ReviewMovieMutation_createReview,
|};

export type ReviewMovieMutation_createReview = {|
  __typename: string,
  // The number of stars this review gave, 1-5
  stars: number,
  // Comment about the movie
  commentary: ?string,
|};"
`;

exports[`Flow code generation #generateSource() should generate query operations with inline fragments 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

/* GraphQL Operation: HeroAndDetails */

export type HeroAndDetailsQuery = {|
  hero: ?(HeroAndDetailsQuery_hero_Human | HeroAndDetailsQuery_hero_Droid),
|};

export type HeroAndDetailsQuery_hero_Droid = {|
  __typename: \\"Droid\\",
  // What others call this droid
  name: string,
  // This droid's primary function
  primaryFunction: ?string,
|};

export type HeroAndDetailsQuery_hero_Human = {|
  __typename: \\"Human\\",
  // What this human calls themselves
  name: string,
  // Height in the preferred unit, default is meters
  height: ?number,
|};
/* GraphQL Fragment: HeroDetails */

export type HeroDetailsFragment = (HeroDetailsFragment__Human | HeroDetailsFragment__Droid);
export type HeroDetailsFragment__Droid = {|
  __typename: \\"Droid\\",
  // This droid's primary function
  primaryFunction: ?string,
|};

export type HeroDetailsFragment__Human = {|
  __typename: \\"Human\\",
  // Height in the preferred unit, default is meters
  height: ?number,
|};"
`;

exports[`Flow code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.


// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.

/* GraphQL Operation: HeroAndFriendsNames */

export type HeroAndFriendsNamesQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ?(HeroAndFriendsNamesQuery_hero_Human | HeroAndFriendsNamesQuery_hero_Droid),
|};

export type HeroAndFriendsNamesQuery_hero_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Droid_friends_Human | HeroAndFriendsNamesQuery_hero_Droid_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Droid_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
  // The friends of the character, or an empty list if they have none
  friends: ?Array< (HeroAndFriendsNamesQuery_hero_Human_friends_Human | HeroAndFriendsNamesQuery_hero_Human_friends_Droid) >,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroAndFriendsNamesQuery_hero_Human_friends_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should generate simple query operations 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

/* GraphQL Operation: HeroName */

export type HeroNameQuery = {|
  hero: ?(HeroNameQuery_hero_Human | HeroNameQuery_hero_Droid),
|};

export type HeroNameQuery_hero_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroNameQuery_hero_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should generate simple query operations including input variables 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.


// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.

/* GraphQL Operation: HeroName */

export type HeroNameQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroNameQuery = {|
  hero: ?(HeroNameQuery_hero_Human | HeroNameQuery_hero_Droid),
|};

export type HeroNameQuery_hero_Droid = {|
  __typename: \\"Droid\\",
  // The name of the character
  name: string,
|};

export type HeroNameQuery_hero_Human = {|
  __typename: \\"Human\\",
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should handle multi-line comments 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

/* GraphQL Operation: CustomScalar */

export type CustomScalarQuery = {|
  commentTest: ? CustomScalarQuery_commentTest,
|};

export type CustomScalarQuery_commentTest = {|
  __typename: string,
  // This is a multi-line
  // comment.
  multiLine: ?string,
|};"
`;

exports[`Flow code generation #generateSource() should handle single line comments 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

/* GraphQL Operation: CustomScalar */

export type CustomScalarQuery = {|
  commentTest: ? CustomScalarQuery_commentTest,
|};

export type CustomScalarQuery_commentTest = {|
  __typename: string,
  // This is a single-line comment
  singleLine: ?string,
|};"
`;
